--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Update translation
+* Add Creative Commons LICENSE and apply APL 2.0
 * Add chinese pdf config
 * Add build icon from ReadTheDocs
 * Add setuptools config
