Fix arch text graph

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Fix arch text graph
+* Add architecture docs
 * Update translation
 * Add Creative Commons LICENSE and apply APL 2.0
 * Add chinese pdf config
